GERONIMO-4885 Update default max heap and max permgen settings. Make gsh and geronimo scripts default to the same settings. Thanks to Quintin Beukes for orignal patch
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/2.2@826768 13f79535-47bb-0310-9956-ffa450edef68